# levelapp-framework

./: MANIFEST.in  README.md  pyproject.toml
levelapp/aspects/: __init__.py  loader.py  logger.py  monitor.py  sanitizer.py
levelapp/clients/: __init__.py  anthropic.py  ionos.py  mistral.py  openai.py  registry.py
levelapp/comparator/: __init__.py  comparator.py  extractor.py  schemas.py  scorer.py  utils.py
levelapp/config/: __init__.py  endpoint.py  interaction_request.py  prompts.py
levelapp/core/: base.py  comparator.py  evaluator.py  session.py  simulator.py  workflow.py
levelapp/evaluator/: __init__.py  evaluator.py
levelapp/metrics/: __init__.py  embedding.py  exact.py  fuzzy.py  token.py
levelapp/repository/: __init__.py  firestore.py
levelapp/simulator/: __init__.py  schemas.py  simulator.py  utils.py
levelapp/utils/: aspects.py  data_loader.py  loader.py  monitoring.py
levelapp/workflow/: __init__.py  base.py  config.py  context.py  entities.py  factory.py  registration.py  runtime.py  schemas.py
source/: conf.py  index.rst
src/level_app/: main.py
tests/: test_anthropic.py  test_ionos.py  test_mistral.py  test_monitoring.py  test_openai.py
