[project]
name = "level-app"
version = "0.1.0"
description = "LevalApp is an evaluation framework for AI/LLM-based software application. [Powered by Norma]"
readme = "README.md"
authors = [
    { name = "KadriSof", email = "kadrisofyen@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "arrow>=1.3.0",
    "httpx>=0.28.1",
    "numpy>=2.3.2",
    "openai>=1.99.9",
    "pandas>=2.3.1",
    "pandas-stubs==2.3.0.250703",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "rapid>=0.0.3",
    "rapidfuzz>=3.13.0",
    "requests>=2.32.4",
    "tenacity>=9.1.2",
]

[project.scripts]
level-app = "level_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12.8",
    "sphinx>=8.2.3",
]
